--- a/StudentPerformanceFactors.ipynb
+++ b/StudentPerformanceFactors.ipynb
@@ -5,7 +5,7 @@
    "id": "bcfab3db",
    "metadata": {},
    "source": [
-    "# ⬇️Step 1: Import Essential Libraries\n",
+    "# <span style="color:magenta; font-weight:bold">⬇️Step 1: Import Essential Libraries</span>\n",
     "<hr>"
    ]
   },
